--- a/extension/popup.html
+++ b/extension/popup.html
@@ -8,23 +8,24 @@
         body {
             width: 350px;
             padding: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            font-family: 'Segoe UI', Arial, 'Liberation Sans', 'DejaVu Sans', sans-serif;
+            background: #f5f6fa;
+            color: #1f4e78;
             margin: 0;
         }
         .container {
-            background: rgba(255, 255, 255, 0.1);
+            background: #fff;
             padding: 20px;
             border-radius: 15px;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid #d6dbe5;
+            box-shadow: 0 2px 8px rgba(31,78,120,0.06);
         }
         h1 {
             text-align: center;
             margin-bottom: 20px;
             font-size: 18px;
             font-weight: 600;
+            color: #1f4e78;
         }
         .input-group {
             margin-bottom: 15px;
@@ -34,28 +35,30 @@
             margin-bottom: 5px;
             font-weight: 500;
             font-size: 14px;
+            color: #1f4e78;
         }
-        input[type="password"], input[type="text"] {
+        input[type="password"], input[type="text"], select {
             width: 100%;
             padding: 10px;
-            border: none;
+            border: 1px solid #d6dbe5;
             border-radius: 8px;
-            background: rgba(255, 255, 255, 0.9);
-            color: #333;
+            background: #f5f6fa;
+            color: #1f4e78;
             font-size: 14px;
             box-sizing: border-box;
         }
-        input[type="password"]:focus, input[type="text"]:focus {
+        input[type="password"]:focus, input[type="text"]:focus, select:focus {
             outline: none;
-            box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5);
+            border-color: #1f4e78;
+            box-shadow: 0 0 0 2px rgba(31,78,120,0.08);
         }
         .button {
             width: 100%;
             padding: 12px;
-            background: rgba(255, 255, 255, 0.2);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            background: #1f4e78;
+            border: none;
             border-radius: 8px;
-            color: white;
+            color: #fff;
             font-size: 14px;
             font-weight: 500;
             cursor: pointer;
@@ -63,7 +66,7 @@
             margin-bottom: 10px;
         }
         .button:hover {
-            background: rgba(255, 255, 255, 0.3);
+            background: #3a7bd5;
             transform: translateY(-1px);
         }
         .status {
@@ -83,6 +86,7 @@
             opacity: 0.8;
             margin-top: 5px;
             line-height: 1.4;
+            color: #1f4e78;
         }
     </style>
 </head>
